--- a/settings.kv
+++ b/settings.kv
@@ -124,6 +124,7 @@
                     on_text: root.on_save_path_text()
                 MDIconButton:
                     icon: "folder-open"
+                    on_release: root.on_dir_button()
 
             StyleLabel:
                 text: "Add a unique Folder name"
