changed the theme to dark

--- a/main.kv
+++ b/main.kv
@@ -1,5 +1,6 @@
 #:import DownloadBoxContainer download.DownloadBoxContainer
 #:import SettingsContainer settings.SettingsContainer
+#:include app_theme.kv
 
 <Spacer@Widget>:
     size_hint_x: None
