--- a/app_theme.kv
+++ b/app_theme.kv
@@ -5,3 +5,14 @@
 <VerticalSpacer@Widget>:
     size_hint_y: None
     height: dp(28)
+
+<MDLabel>:
+    theme_text_color: "Primary"
+
+<MDTextField>:
+    color_mode: "custom"
+    line_color_focus: app.theme_cls.secondary_text_color
+
+<MDCheckbox>:
+    color_mode: "custom"
+    selected_color: app.theme_cls.opposite_bg_dark
